tests/NormalTests/paczka1/small_fuzzy/49440106.err
Error in line 6: jmJ3o A342 73,0
Error in line 4: nNtD A890 99,2
